implicitely enble WRITE_EXTERNAL_STORAGE permission

--- a/GameBoid/AndroidManifest.xml
+++ b/GameBoid/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
 	<uses-sdk android:minSdkVersion="1" />
 
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 	<application android:label="@string/app_label"
 			android:icon="@drawable/app_icon">
 
