--- a/GameBoid/AndroidManifest.xml
+++ b/GameBoid/AndroidManifest.xml
@@ -8,7 +8,7 @@
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 	<application android:label="@string/app_label"
-			android:icon="@drawable/app_icon">
+			android:icon="@drawable/app_icon" android:debuggable="true">
 
 		<activity android:name="GameBoid">
 			<intent-filter>
