--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,13 @@
 		android:versionCode="6"
 		android:versionName="1.3.2">
 
-	<uses-sdk android:minSdkVersion="1" android:targetSdkVersion="10"/>
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="10"/>
 
-        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.VIBRATE" />
 
 	<application android:label="@string/app_label" android:hardwareAccelerated="true"
-			android:icon="@drawable/app_icon" android:allowBackup="true" android:debuggable="true">
+			android:icon="@drawable/app_icon" android:allowBackup="true">
 
 		<activity android:name="GameBoid">
 			<intent-filter>
