--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,7 @@
 
 		<activity android:name="com.androidemu.EmulatorActivity"
 		    android:process=":emulator"
-		    android:launchMode="singleTask"
-		    android:configChanges="keyboard|screenSize|orientation">
+		    android:launchMode="singleTask">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
