Moved Preferences in the same process with EmulatorActivity (required for listeners and, probably, other stuff to work)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
 			</intent-filter>
 		</activity>
 
-		<activity android:name="GamePreferences" />
+		<activity android:name="GamePreferences" android:process=":emulator"/>
 		
 		<!-- common components - will be omitted after manifest merging support -->
 		<activity android:name="com.androidemu.FileChooser" />
