--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
 
 		<activity android:name="com.androidemu.EmulatorActivity"
 		    android:process=":emulator"
-		    android:launchMode="singleTask">
+		    android:launchMode="singleTask"
+		    android:configChanges="orientation|screenSize|keyboardHidden">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
