--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,14 +4,14 @@
 		android:versionName="1.3.2"
 		android:installLocation="preferExternal">
 
-	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="17"/>
+	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 
 	<application android:label="@string/app_label" android:hardwareAccelerated="true"
-			android:icon="@drawable/app_icon" android:allowBackup="true"
-			android:theme="@style/emuTheme">
+			android:icon="@drawable/app_icon" android:allowBackup="true">
+<!-- 			android:theme="@style/emuTheme"> -->
 
 		<activity android:name="com.androidemu.EmulatorActivity"
 		    android:process=":emulator"
